--- a/compose.yaml
+++ b/compose.yaml
@@ -1,21 +1,57 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
   database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
+    image: mariadb:10.7.3
+    restart: unless-stopped
+    container_name: oauth-prod-db
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+      MARIADB_USER: root
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_DATABASE: devscast
+      MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 'no'
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - database-data:/var/lib/mysql:rw
+      - ./var:/var/www/var
+    labels:
+      com.symfony.server.service-prefix: 'DATABASE'
+
+  web:
+    image: nginx:alpine
+    container_name: oauth-prod-web
+    restart: unless-stopped
+    ports:
+      - "8000:80"
+    volumes:
+      - .:/var/www:delegated
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    links:
+      - php
+
+  php:
+    user: '${USER_ID}:${GROUP_ID}'
+    image: grafikart/php:php8.2-2
+    container_name: oauth-prod-php
+    restart: unless-stopped
+    volumes:
+      - .:/var/www:delegated
+    depends_on:
+      - database
+
+  adminer:
+    image: adminer:4.8.1
+    restart: unless-stopped
+    container_name: oauth-prod-adminer
+    depends_on:
+      - database
+    environment:
+      APP_ENV: dev
+      ADMINER_DESIGN: pepa-linha
+      ADMINER_DEFAULT_SERVER: database
+    ports:
+      - "8082:8080"
 
 volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  database-data:
+    driver:
+      local
